|----------------------------------------------------------------------------------------------------
|CHANGELOG                                                                                          |
|----------------------------------------------------------------------------------------------------
|        20.10.2018 VERISON 0.5 [PUBLIC RELEASE]                                                    |
|        BUILD 500                                                                                  |
|----------------------------------------------------------------------------------------------------
|  JOIN MY discord                                                                                  |
|  gg.jyles.pw                                                                                      |
|  bot.jyles.pw                                                                                     |
|  @Seed#0001                                                                                       |
|----------------------------------------------------------------------------------------------------
|  COLLABORATORS                 |                                                                  |
| ________________________________                                                                  |
| @CheezBiscut#9461  [DMOJ Plugin]                                                                  |
| @Seed#0001                                                                                        |
|----------------------------------------------------------------------------------------------------
|                                                                                                   |
|                                                                                                   |
| LATEST ADDITIONS                                                                                  |