@@ -1,7 +1,7 @@
 {
   "name": "SeedBot",
-  "version": "0.5.7",
-  "build": "581",
+  "version": "0.5.8",
+  "build": "583",
   "ownerID": "230485481773596672",
   "description": "A Bot by @Seed#0001 for Discord",
   "main": "bot.js",
@@ -20,8 +20,5 @@
     "rebuild": "^0.1.2",
     "signale": "^1.3.0",
     "ytpl": "^0.1.14"
-  },
-  "scripts": {
-    "start": "node bot.js"
   }
 }
